# nakdimon-onnx

./: .gitignore  BUILDING.md  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: file.py  performance.py  usage.py
scripts/: export.py  inference.py
src/nakdimon_onnx/: __init__.py  config.py
test/: test_diacritics.py
